# ferment

./: .gitignore  TODO.md
ferment-example/: Cargo.toml  build.rs  cbindgen.toml
ferment-example-nested/: Cargo.toml  build.rs
ferment-example-nested/src/: fermented.rs  fetch_identity.rs  lib.rs
ferment-example-traits-nested/: build.rs
ferment-example-traits-nested/src/: fermented.rs
ferment-example-traits/src/: fermented.rs
ferment-example/src/: fermented.rs  lib.rs
ferment-example/src/chain/common/: chain_type.rs
ferment-example/src/example/: mine.rs  mod.rs
ferment-example/src/identity/: identity.rs
ferment-interfaces/src/: lib.rs
java-example/: README.md  Vec_u8.i  example.i  swig.sh
java-example-3/: example.i  swig.sh
java-example-3/src/main/c/: CMakeLists.txt  dpp.h  sdk.c  sdk.cpp
java-example-3/src/main/java/org/dash/sdk/: BinaryData.java  ContractBounds.java  ContractBounds_SingleContractDocumentType_Body.java  ContractBounds_SingleContract_Body.java  ContractBounds_Tag.java  DataContractNotPresentError.java  FeatureVersion.java  FeatureVersionBounds.java  HashID.java  Identifier.java  IdentifierBytes32.java  Identity.java  IdentityPublicKeyV0.java  IdentityPublicKey_Tag.java  IdentityV0.java  Identity_Tag.java  InnerStruct.java  KeyID.java  KeyType.java  MemoryFactory.java  OptionalFeatureVersion.java  OuterStruct.java  PlatformVersion.java  ProtocolError.java  ProtocolError_MaxEncodedBytesReachedError_Body.java  ProtocolError_StringDecodeError2_Body.java  ProtocolError_Tag.java  ProtocolError_UnknownVersionMismatch_Body.java  Result_ok_crate_identity_identity_Identity_err_crate_nested_ProtocolError.java  Revision.java  RootStruct.java  SWIGTYPE_p_FeatureVersion.java  SWIGTYPE_p_HashID.java  SWIGTYPE_p_KeyType.java  SWIGTYPE_p_Purpose.java  SWIGTYPE_p_SecurityLevel.java  SWIGTYPE_p_Vec_crate_nested_FeatureVersion.java  SWIGTYPE_p_crate_identity_identity_KeyType.java  SWIGTYPE_p_crate_identity_identity_Purpose.java  SWIGTYPE_p_crate_identity_identity_SecurityLevel.java  (+35 more)
java-example-3/src/main/java/org/dash/sdk/base/: BaseObject.java
java-example-3/src/main/swig/: Vec_u8.i  binary_data.i  contract_bounds.i  enums.i  example.i  identifier.i  identity.i  identity_public_key.i  identity_public_key_enums.i  keyid.i  revision.i  timestamp_millis.i  uint8_array.i
java-example-3/src/test/java/org/dash/sdk/: BaseTest.java  BinaryDataTest.java  ContractBoundsTest.java  GenericsTest.java  IdentifierTest.java  IdentityPublicKeyTest.java  IdentityTest.java  generics.java
java-example/src/main/c/: CMakeLists.txt  dpp.h  sdk.c  sdk.cpp
java-example/src/main/java/org/dash/sdk/: AppliedRequestSettings.java  ArrayOfArraysOfHashes.java  ArrayOfArraysOfHashes_FFI.java  BinaryData.java  ChainType.java  ChainType_FFI.java  ChainType_FFI_Tag.java  ChainType_Tag.java  ContractBounds.java  ContractBounds_FFI.java  ContractBounds_FFI_SingleContractDocumentType_Body.java  ContractBounds_FFI_Tag.java  ContractBounds_SingleContractDocumentType_Body.java  DataContractNotPresentError_FFI.java  DevnetType.java  DevnetType_FFI.java  Hash160.java  Hash160_FFI.java  HashID.java  IHaveChainSettings.java  IHaveChainSettings_TraitObject.java  IHaveChainSettings_VTable.java  Identifier.java  IdentifierBytes32.java  Identity.java  IdentityFactory.java  IdentityFactory_TraitObject.java  IdentityFactory_VTable.java  IdentityPublicKey.java  IdentityPublicKeyTag.java  IdentityPublicKeyV0.java  IdentityPublicKey_Tag.java  IdentityV0.java  Identity_FFI_Tag.java  KeyID.java  KeyType.java  MapOfHashes.java  MapOfHashes_FFI.java  MapOfVecHashes.java  MapOfVecHashes_FFI.java  (+139 more)
java-example/src/test/java/org/dash/sdk/: IdentityTest.java
