[package]
name = "ferment-example"
version = "0.1.3"
edition = "2021"
build = "build.rs"

[dependencies]
ferment-interfaces = { path = "../ferment-interfaces" }
ferment-macro = { path = "../ferment-macro" }
rand = { version = "0.8.4", features = ["small_rng"] }
dashcore = { git = "https://github.com/dashpay/rust-dashcore", features = [
    "std",
    "secp-recovery",
    "rand",
    "signer",
    "serde",
], default-features = false, branch = "master" }
# rs-sdk = { path = "../../platform/packages/rs-sdk"}
dpp = { path = "../../platform/packages/rs-dpp"}
platform-value = { path = "../../platform/packages/rs-platform-value"}
tokio = { version = "1.34", features = ["full"] }

[build-dependencies]
cbindgen = "0.26.0"
ferment = { path = "../ferment" }


[lib]
crate-type = ["staticlib"]
name = "ferment_example"
