[package]
name = "ferment-example"
version = "0.1.4"
edition = "2021"
#build = "build.backup"

[dependencies]
async-trait = "0.1.74"
ferment-interfaces = { path = "../ferment-interfaces" }
ferment-macro = { path = "../ferment-macro" }
tokio = { version = "1.34", features = ["full"] }
rand = { version = "0.8.4", features = ["small_rng"] }
dashcore = { git = "https://github.com/dashpay/rust-dashcore", features = [
    "std",
    "secp-recovery",
    "rand",
    "signer",
    "serde",
], default-features = false, branch = "master" }

[build-dependencies]
cbindgen = "0.26.0"
ferment = { path = "../ferment" }

[build]
rustflags = ["-C", "force-frame-pointers=yes"]

[lib]
name = "ferment_example"
crate-type = ["staticlib"]

[profile.dev]
debug = true  # Ensures debug symbols are included
panic = 'unwind'
